# theBox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile.jetson  Dockerfile.workstation  FIELD_DEMO_CHECKLIST.md  Makefile  QUALITY_REPORT.md  SECURITY_REPORT.md  app.py  bandit-report.json  config.json  docker-compose.jetson.yml  pyproject.toml  requirements-jetson.txt  requirements.txt  start.bat  start.sh  test_mara_integration.py  test_settings_final.py  thebox_mvp.sqlite
.cursor/: rules
data/: DroneShield_Detections.txt
release/field_demo_2024-12-19/: MANIFEST.json  RELEASE_NOTES.md  app.py  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
release/field_demo_2024-12-19/config/: env.sample
release/field_demo_2024-12-19/docker/: docker-compose.yml
release/field_demo_2024-12-19/docs/: DEPENDENCY_GRAPH.md  QUICKSTART_DOCKER.md  QUICKSTART_JETSON.md  README.md  SEARCH_PLANNER_RFC.md  SEARCH_PLANNER_TESTPLAN.md  TESTING.md  env.schema.json
release/field_demo_2024-12-19/docs/dspnor/: CHANGELOG.md  example.env
release/field_demo_2024-12-19/docs/schemas/: mara_detection.json  vision_detection.json
release/field_demo_2024-12-19/mvp/: config.py  db_adapter.py  env_loader.py  env_schema.py  event_bus.py  geometry.py  logging_config.py  schemas.py  trakka_docs.py  utils.py
release/field_demo_2024-12-19/mvp/plugins/droneshield_listener/: normalize.py  udp_listener.py
release/field_demo_2024-12-19/mvp/plugins/ranging/: range_stub.py
release/field_demo_2024-12-19/mvp/plugins/seacross/: seacross_adapter.py
release/field_demo_2024-12-19/mvp/plugins/search/: search_stub.py
release/field_demo_2024-12-19/mvp/plugins/trakka/: trakka_adapter.py
release/field_demo_2024-12-19/plugins/confidence/: confidence_plugin.py  plugin.py
release/field_demo_2024-12-19/plugins/droneshield_listener/: plugin.py
release/field_demo_2024-12-19/plugins/dspnor/: constants.py  control.py  io_discovery.py  metrics.py  nmea_ingest.py  normalizer.py  parser_cat010.py  parser_status.py  plugin.py  schemas.py
release/field_demo_2024-12-19/plugins/dspnor/templates/: dspnor.html
release/field_demo_2024-12-19/plugins/example_detector/: plugin.py
release/field_demo_2024-12-19/plugins/example_modifier/: plugin.py
release/field_demo_2024-12-19/plugins/labels_ui/: plugin.py
release/field_demo_2024-12-19/plugins/mara/: README.md  io_serial.py  io_tcp.py  io_udp.py  models.py  parser.py  plugin.py  publisher.py  utils.py
release/field_demo_2024-12-19/plugins/mara/templates/: mara_plugin.html
release/field_demo_2024-12-19/plugins/persistence_disk/: plugin.py
release/field_demo_2024-12-19/plugins/range/: plugin.py  range_plugin.py
release/field_demo_2024-12-19/plugins/seacross_sender/: nmea_sender.py  plugin.py
release/field_demo_2024-12-19/plugins/seacross_sender/templates/: seacross_sender_plugin.html
release/field_demo_2024-12-19/plugins/search_planner/: README-search_planner.md  config.py  plugin.py
release/field_demo_2024-12-19/plugins/silvus_listener/: bearing.py  config.py  live_udp_client.py  parser.py  plugin.py
release/field_demo_2024-12-19/plugins/trakka_control/: egm96_transform_instructions.py  plugin.py  tcp_sender.py  trakka_rx_statemachine.py
release/field_demo_2024-12-19/plugins/vision/: plugin.py  vision_plugin.py
release/field_demo_2024-12-19/sbom/: sbom.json
release/field_demo_2024-12-19/scripts/: health_check.py  replay_harness.py  smoke_test.py
release/field_demo_2024-12-19/scripts/windows/: SET_ENV.ps1  run_demo.ps1
release/field_demo_2024-12-19/templates/settings/: settings.html  settings_old.html
release/field_demo_2024-12-19/templates/testconsole/: testconsole.html
release/field_demo_2024-12-19/tests/: pytest.ini  test_confidence_fusion.py  test_confidence_plugin.py  test_confidence_range_vision.py  test_e2e_mvp.py  test_range_plugin.py  test_settings_page.py  test_trakka_mode_switch.py  test_vision_logic.py
release/field_demo_2024-12-19/tests/mara/: test_autodetect.py  test_end_to_end_udp.py  test_parse_csv.py  test_parse_jsonl.py  test_parse_kv.py
release/field_demo_2024-12-19/tests/silvus_listener/: test_listener_unit.py  test_udp_live.py
release/field_demo_2024-12-19/tests/trakka_control/: tcp_tester.py  trakka_ops.py
release/field_demo_2024-12-19/thebox/: database.py  event_manager.py  plugin_interface.py  plugin_manager.py
release/field_demo_2024-12-19/webui/settings/: __init__.py  routes.py
release/field_demo_2024-12-19/webui/testconsole/: __init__.py  routes.py
(+171 files in other folders)
