[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thebox-mvp"
version = "0.1.0"
description = "MVP pipeline: DroneShield → DB → Trakka → Search → SeaCross"
readme = "mvp/README_MVP.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


